# Complex_Synapse

./: .gitignore  README.md  TwoTime-Case2.nb  TwoTime-Case3.nb  TwoTime-Case4.nb
Code/: CascMSFig.m  CascMSFig2.m  CounterExample.m  Crossover.m  EnvFig.m  GridSearch.m  LifetimeFig.m  MakeVORcomparison.m  OptFinite.m  Replot.m  TestCntEx.m  TestOptFinite.m  TouchEnv.m  UniSMScurve.m  VORcomparison.m  VORexpt.m  assignToObject.m  haha.m
Code/Python/: balance.ipynb  get_python_process.ps1  heuristic sticky.ipynb  heuristic.ipynb  heuristic_shorten.ipynb  plots.ipynb  setup.cfg  setup.py  test_id.py  test_id_vid.py  test_optim.py  test_optim_vid.py
Code/Python/complex_synapse/: __init__.py  builders.py  examples.py  graphs.py  markov.py  markov_param.py  optimise.py  options.py  shorten.py  soptimise.py  sqrt.py  sticky.py  synapse_base.py  synapse_mem.py  synapse_memory_model.py  synapse_opt.py
Code/Python/complex_synapse/identify/: __init__.py  _baum_welch.pyi  baum_welch.py  fit_synapse.py  plast_seq.py  record.py  synapse_id.py  video.py
Code/Python/complex_synapse/optimise/: __init__.py  optimise.py  plot.py  shorten.py  sticky.py  synapse_opt.py  video.py
Code/Python/src/: .cquery  baum_welch.c  gufunc_common.h  gufunc_common_f.h  rearrange_data.c  rearrange_data.h
Cosyne/: Abstract-minimal.bib  Abstract.tex  LearningMemory.docx  LenvHeuristic.eps  Timecales.tex  Timecales_short.tex  utcaps_m.bst
MHCpaper/: MHCmodelFig.tex  MHCsupp.fff  MHCsupp.tex
MHCslides/: MHCslides.tex  MHCslides_10min.tex  MHCslides_15min.tex  MHCslides_20min.tex  (+1 more)
(+1285 files in other folders)
